typesafe_idb/tests/ui/read_from_store_not_in_txn.stderr
error[E0277]: the trait bound `typesafe_idb::chain::Chain<UserStoreMarker, typesafe_idb::chain::Chain<(), ()>>: StoreMarker<Repository>` is not satisfied
  --> tests/ui/read_from_store_not_in_txn.rs:46:13
   |
46 |         txn.object_store::<Repository>().unwrap();
   |             ^^^^^^^^^^^^ the trait `StoreMarker<Repository>` is not implemented for `typesafe_idb::chain::Chain<UserStoreMarker, typesafe_idb::chain::Chain<(), ()>>`
   |
   = help: the trait `StoreMarker<S>` is implemented for `typesafe_idb::chain::Chain<Head, Tail>`
note: required by a bound in `Txn::<Markers, Mode>::object_store`
  --> src/txn.rs
   |
   |     pub fn object_store<S>(&self) -> Result<ObjectStore<'_, S, Mode>, crate::Error>
   |            ------------ required by a bound in this associated function
...
   |         Markers: StoreMarker<S>,
   |                  ^^^^^^^^^^^^^^ required by this bound in `Txn::<Markers, Mode>::object_store`
